--- a/SimpleClock/SimpleClock/Resources/Info.plist
+++ b/SimpleClock/SimpleClock/Resources/Info.plist
@@ -15,13 +15,13 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 Pascal Wagler. All rights reserved.</string>
+	<string>Copyright © 2016 - 2018 Pascal Wagler. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>SimpleClock.SimpleClock</string>
 </dict>
